# PubMed-Scraper

./: .env.example  .gitignore  Makefile  README.md  collect_500_more.py  collect_open_access.py  docker-compose.yml  download_pdfs.py  pyproject.toml  requirements.txt  test_scrape.py  web_app.py
docker/services/: gateway.Dockerfile  worker.Dockerfile
src/api/: __init__.py
src/cli/: __init__.py  main.py
src/crawlers/: __init__.py
src/crawlers/arxiv/: __init__.py  client.py
src/crawlers/base/: __init__.py  abstract_crawler.py  rate_limiter.py
src/crawlers/biorxiv/: __init__.py  client.py
src/crawlers/pubmed/: __init__.py  client.py
src/download/: __init__.py  paper_downloader.py  text_extractor.py
src/export/: __init__.py  base_exporter.py  csv_exporter.py  export_manager.py  json_exporter.py  parquet_exporter.py  txt_exporter.py
src/gateway/: __init__.py  main.py  schemas.py
src/processors/: __init__.py
src/processors/classifier/: __init__.py  paper_classifier.py
src/processors/metadata/: __init__.py  country_mapper.py
src/shared/: __init__.py  config.py  constants.py  exceptions.py  logging.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: conftest.py
tests/unit/: test_classifier.py  test_exporters.py
