[tool.poetry]
name = "pubmed-scraper"
version = "1.0.0"
description = "Distributed multi-source research paper scraper for PubMed, arXiv, bioRxiv"
authors = ["Deepanshu Bhatt"]
readme = "README.md"
license = "LGPL-3.0-or-later"
packages = [{include = "src"}]

[tool.poetry.scripts]
pubmed-scraper = "src.cli.main:app"

[tool.poetry.dependencies]
python = "^3.10"

# API & Web Framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Async HTTP Client
httpx = "^0.26.0"
aiohttp = "^3.9.0"

# Task Queue & Orchestration
celery = {extras = ["redis"], version = "^5.3.0"}
redis = "^5.0.0"

# Database
motor = "^3.3.0"
beanie = "^1.24.0"
pymongo = "^4.6.0"

# Data Processing & Export
pandas = "^2.1.0"
pyarrow = "^15.0.0"
openpyxl = "^3.1.0"

# XML/HTML Parsing
lxml = "^5.1.0"
beautifulsoup4 = "^4.12.0"

# ML & NLP for Classification
scikit-learn = "^1.4.0"
spacy = "^3.7.0"

# CLI
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.7.0"

# Utilities
python-dotenv = "^1.0.0"
tenacity = "^8.2.0"
structlog = "^24.1.0"

# File Storage
boto3 = "^1.34.0"
aioboto3 = "^12.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
black = "^24.1.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
